# dh_venv_demo

./: .gitignore  README.md  build.sh
weather/: pyproject.toml
weather/debian/: changelog  control  rules  weather.links  weather.triggers
weather/weather/: __main__.py
