[build-system]
# https://github.com/pypa/setuptools_scm/
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
description = "Show the current weather"
dependencies = ["importlib-metadata"]
version = "1.0"

[project.scripts]
weather = "weather.__main__:main"
